Bug 551948: [14] Text Blocks - New Escape Sequences
Enabling the tests once again with Java comparison

Change-Id: I2d1e0735399483237f2106e5f84f0b0d8ebfeed1
Signed-off-by: Jay Arthanareeswaran <jarthana@in.ibm.com>